--- a/project1/pokemon/src/App.css
+++ b/project1/pokemon/src/App.css
@@ -17,7 +17,9 @@
 .App-intro {
   font-size: large;
 }
-
+.PokeList-item{
+  text-transform: uppercase;
+}
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
