--- a/project1/pokemon/src/App.css
+++ b/project1/pokemon/src/App.css
@@ -24,3 +24,17 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+button.PokeList-item.list-group-item{
+  text-align: center;
+}
+#contained-modal-title{
+  text-transform: capitalize;
+}
+.Aligner{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.Aligner-item{
+  max-width: 50%;
+}
